--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,12 +1,11 @@
 ## Projects
 
 <ProjectCard
-  title="Tips & Tricks for Gatsby"
-  link="https://www.lekoarts.de/gatsby/tips-and-tricks-for-gatsby?utm_source=cara&utm_medium=Theme"
+  title="Offical School website"
+  link="https://zsm.elblag.pl/"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  A collection of short, but useful quick tips shared by me and the community
-  about Gatsby. From GraphQL over local development to deployment.
+  Wordpress, CSS, HTML, JavaScript, MySQL, Github
 </ProjectCard>
 <ProjectCard
   title="Setting  up a yarn Workspace"
