--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -3,7 +3,7 @@
 <ProjectCard
   title="Offical School website"
   link="https://zsm.elblag.pl/"
-  bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
+  bg="url(/src/static/zsm.png)"
 >
   Wordpress, CSS, HTML, JavaScript, MySQL, Github
 </ProjectCard>
